--- a/.babelrc
+++ b/.babelrc
@@ -23,8 +23,7 @@
         ["@babel/plugin-proposal-private-methods", { "loose": true }],
         ["@babel/plugin-proposal-decorators", {"legacy": true }],
         ["@babel/plugin-proposal-class-properties", {"loose": true}],
-        "@babel/plugin-syntax-top-level-await",
-        "transform-vue-jsx"
+        "@babel/plugin-syntax-top-level-await"
     ],
     "ignore": [
         "node_modules",
