--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
+    "typescript": "^4.5.2",
     "unplugin-vue-components": "^0.17.2",
     "vue-loader": "^16.8.3",
     "vue-router": "^4.0.12",
@@ -73,7 +74,8 @@
   "scripts": {
     "pre-commit": "lint-staged",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
-    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
+    "dev:d": "cross-env NODE_ENV=development webpack-dashboard -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
+    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js",
     "prepare": "husky install"
   },
   "author": "",
