--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "pre-commit": "lint-staged",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
     "dev:d": "cross-env NODE_ENV=development webpack-dashboard -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
-    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js",
+    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
     "prepare": "husky install"
   },
   "author": "",
