--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "vuex": "^4.0.2",
     "webpack": "^5.64.1",
     "webpack-build-notifier": "^2.3.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
     "webpack-dashboard": "^3.3.6",
     "webpack-dev-server": "^4.5.0",
