--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "eslint": "7",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "happypack": "^5.0.0-beta.4",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
@@ -49,7 +50,6 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "progress-bar-webpack-plugin": "^2.1.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.5.2",
@@ -76,7 +76,7 @@
     "pre-commit": "lint-staged",
     "prod": "cross-env NODE_ENV=production webpack --config build/webpack.prod.js",
     "dev:d": "cross-env NODE_ENV=development webpack-dashboard -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
-    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js --open",
+    "dev": "cross-env NODE_ENV=development ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --config build/webpack.dev.js  --progress --open",
     "prepare": "husky install"
   },
   "author": "",
