--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "happypack": "^5.0.0-beta.4",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
+    "postcss-loader": "^6.2.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "ip": "^1.1.5",
     "jdists": "^2.2.4",
     "jdists-loader": "^0.0.26",
