--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "element-plus": "^1.2.0-beta.3",
     "query-string": "^7.0.1",
     "store": "^2.0.12",
-    "stylelint": "^14.1.0",
-    "vue": "^3.2.22"
+    "vue": "^3.2.22",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -43,8 +44,6 @@
     "happypack": "^5.0.0-beta.4",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.4",
-    "postcss-loader": "^6.2.1",
-    "postcss-px-to-viewport": "^1.1.1",
     "ip": "^1.1.5",
     "jdists": "^2.2.4",
     "jdists-loader": "^0.0.26",
@@ -52,14 +51,16 @@
     "less-loader": "^10.2.0",
     "lint-staged": "^12.0.3",
     "mini-css-extract-plugin": "^2.4.5",
+    "postcss-loader": "^6.2.1",
+    "postcss-px-to-viewport": "^1.1.1",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.1.0",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.5.2",
     "unplugin-vue-components": "^0.17.2",
+    "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^16.8.3",
-    "vue-router": "^4.0.12",
     "vue-style-loader": "^4.1.3",
-    "vuex": "^4.0.2",
     "webpack": "^5.64.1",
     "webpack-build-notifier": "^2.3.0",
     "webpack-bundle-analyzer": "^4.5.0",
